@@ -1,6 +1,8 @@
 === Version 0.7.4
 * Enhancements
   * Added ability to find text_fields with :css when using Selenium
+* Fixes
+  * Fixed problem getting value from SelectList when it is in a Frame with Selenium
 
 === Version 0.7.3 / 2012-8-18
 * Enhancements
